--- a/Assets/Snake.Core/Runtime/Snake.Core.asmdef
+++ b/Assets/Snake.Core/Runtime/Snake.Core.asmdef
@@ -1,10 +1,7 @@
 {
     "name": "Snake.Core",
     "rootNamespace": "Snake.Core",
-    "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
