Implemented basic state machine for game loop

--- a/Assets/Scripts/Runtime/Snake.asmdef
+++ b/Assets/Scripts/Runtime/Snake.asmdef
@@ -13,7 +13,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        ""
+        "Zenject-usage.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
