--- a/Assets/Scripts/Runtime/Snake.asmdef
+++ b/Assets/Scripts/Runtime/Snake.asmdef
@@ -7,7 +7,8 @@
         "GUID:593a5b492d29ac6448b1ebf7f035ef33",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:705daf1babd7341678040fe4dcf2faff",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
