--- a/Assets/Scripts/Runtime/Snake.asmdef
+++ b/Assets/Scripts/Runtime/Snake.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Snake",
-    "rootNamespace": "Snake",
+    "name": "SnakeView",
+    "rootNamespace": "SnakeView",
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
